eZ Online Editor MCE extension Changelog

5.0rc
* Fixed bug #013320: (Development mode doesn't work fully)
* Made embed tag use span instead of div internally to be able to add link around it
* Removed CustomAttributeStyleMap since it caused embed / embed-inline tags to be converted 
 to a font tag by the browser if you for instance used 'color' style for text-color.
* Added background color to embed / embed-inline objects to make them more visable

5.0Beta4
* Fixed bug #013151: No nice URLs with ezoe
* Append paragraph if custom / embed tag is inserted as last tag in editor
* reworked custom attribute settings in content.ini to be more streamlined.
* tags in description / caption field didn't work as intended (strip tags used)
* Bumped required Mozilla version to 1.8 ( Firefox 1.5 and Netscape 9.x )
* Fixed #013165: Underline custom tag into a new paragraph
* updated TinyMCE to 3.1.0.1
* moved custom attribute datatypes handling to independant templates in ezoe/customattributes/*.tpl
  So you can add your own and customize exising ones( as proposed to @kc at #ezconf ).
* added color custom attribute datatype with color picker and preview
* Fixed bug #013201: Can't identify which page a link is currently pointing to
* Fixed regression #013243: Selecting a node from the search or browse in link properties is broken
* Implemented possibility to have different editor layouts ( buttons and toolbar/path position )
  requries eZ Publish 4.1 final (ref issue number #13249)
* Implemented ezoe.ini [EditorSettings]CustomAttributeStyleMap to map custom attributes to element
  style values to preview their effect on the element ( for instance text color, border width, border color )
* Fixed bug #013254: Selecting node from browse fails in ie
* Fixed bug #013012: Inline custom tags doesn't work properly in Opera and IE
  ( removed need to have a hidden paragraph inside the custom tag, this fixes many issues concerning inline custom tags )