@@ -97,6 +97,12 @@ SkinVariant=
 # - disables js / css packer (for debugging apache rewrite rules)
 DevelopmentMode=disabled
 
+
+# Enables compatibility mode by making editor behave more like OE 4.x
+# - uses attachment icon for embed relations, makes it easier to place embed objects inside text
+#   but looses preview functionality. (name of embed object is shown if you hover the icon though)
+CompatibilityMode=disabled
+
 [SystemSettings]
 # Use relative URLs (without host) inside the editor (only affects images in OE 5.0).
 RelativeURL=enabled
